First attempt at normalization (naive normalization)

--- a/TypeCheckerGenerator/latex/Pattern.tex
+++ b/TypeCheckerGenerator/latex/Pattern.tex
@@ -17,11 +17,7 @@
 \begin{code}%
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
-\AgdaModule{CoreLanguage}\AgdaSpace{}%
-\AgdaKeyword{renaming}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{↠}\AgdaSpace{}%
-\AgdaSymbol{to}\AgdaSpace{}%
-\AgdaFunction{↠↠}\AgdaSymbol{)}\<%
+\AgdaModule{CoreLanguage}\<%
 \\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
@@ -522,9 +518,9 @@ returns an environment for the \emph{opened} pattern.
 \AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
 \AgdaBound{q}\AgdaSymbol{)}%
 \>[24]\AgdaSymbol{=}%
-\>[313I]\AgdaKeyword{do}\<%
+\>[309I]\AgdaKeyword{do}\<%
 \\
-\>[313I][@{}l@{\AgdaIndent{0}}]%
+\>[309I][@{}l@{\AgdaIndent{0}}]%
 \>[28]\AgdaBound{x}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{match}\AgdaSpace{}%
@@ -550,9 +546,9 @@ returns an environment for the \emph{opened} pattern.
 \AgdaSymbol{(}\AgdaInductiveConstructor{bind}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[330I]\AgdaKeyword{do}\<%
+\>[326I]\AgdaKeyword{do}\<%
 \\
-\>[330I][@{}l@{\AgdaIndent{0}}]%
+\>[326I][@{}l@{\AgdaIndent{0}}]%
 \>[28]\AgdaBound{x}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{match}\AgdaSpace{}%
@@ -988,3 +984,4 @@ having a pattern index which also needs to be opened in the return type.
 \AgdaBound{θ}\<%
 \end{code}
 }
+
