--- a/TypeCheckerGenerator/latex/TypeChecker.tex
+++ b/TypeCheckerGenerator/latex/TypeChecker.tex
@@ -129,6 +129,10 @@
 \AgdaModule{Data.String}\AgdaSpace{}%
 \AgdaKeyword{using}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}++\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Semantics}\<%
 \end{code}
 }
 \hide{
@@ -199,6 +203,48 @@ We now have all of the required definitions to construct the process of
 typechecking. This process is a set of mutually recursive definitions which
 we will describe here.
 
+When we check types, it is convenient to collect all the rules together so
+that we might easily pass them around. We do so will the following type.
+
+\begin{code}%
+\>[0]\AgdaKeyword{data}\AgdaSpace{}%
+\AgdaDatatype{RuleSet}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
+\\
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaInductiveConstructor{rs}\AgdaSpace{}%
+\AgdaSymbol{:}%
+\>[115I]\AgdaDatatype{List}\AgdaSpace{}%
+\AgdaRecord{TypeRule}%
+\>[22]\AgdaSymbol{→}\<%
+\\
+\>[.][@{}l@{}]\<[115I]%
+\>[7]\AgdaDatatype{List}\AgdaSpace{}%
+\AgdaRecord{UnivRule}%
+\>[22]\AgdaSymbol{→}\<%
+\\
+%
+\>[7]\AgdaDatatype{List}\AgdaSpace{}%
+\AgdaRecord{∋rule}%
+\>[22]\AgdaSymbol{→}\<%
+\\
+%
+\>[7]\AgdaDatatype{List}\AgdaSpace{}%
+\AgdaRecord{ElimRule}%
+\>[22]\AgdaSymbol{→}\<%
+\\
+%
+\>[7]\AgdaDatatype{List}\AgdaSpace{}%
+\AgdaRecord{β-rule}%
+\>[22]\AgdaSymbol{→}\<%
+\\
+%
+\>[7]\AgdaDatatype{RuleSet}\<%
+\end{code}
+
+
 Firstly, we present four functions, one for checking each of the user
 provided typing rules. We must provide the list of specific rule types
 alongside the complete structure of all rules so that we might recurse
@@ -218,8 +264,8 @@ fail with a descriptive error.
 \>[36]\AgdaSymbol{→}\<%
 \\
 %
-\>[15]\AgdaDatatype{Rules}%
-\>[36]\AgdaSymbol{→}\<%
+\>[15]\AgdaDatatype{RuleSet}%
+\>[38]\AgdaSymbol{→}\<%
 \\
 %
 \>[15]\AgdaDatatype{List}\AgdaSpace{}%
@@ -253,8 +299,8 @@ fail with a descriptive error.
 \>[36]\AgdaSymbol{→}\<%
 \\
 %
-\>[15]\AgdaDatatype{Rules}%
-\>[36]\AgdaSymbol{→}\<%
+\>[15]\AgdaDatatype{RuleSet}%
+\>[38]\AgdaSymbol{→}\<%
 \\
 %
 \>[15]\AgdaDatatype{List}\AgdaSpace{}%
@@ -281,8 +327,8 @@ fail with a descriptive error.
 \>[36]\AgdaSymbol{→}\<%
 \\
 %
-\>[15]\AgdaDatatype{Rules}%
-\>[36]\AgdaSymbol{→}\<%
+\>[15]\AgdaDatatype{RuleSet}%
+\>[38]\AgdaSymbol{→}\<%
 \\
 %
 \>[15]\AgdaDatatype{List}\AgdaSpace{}%
@@ -304,13 +350,13 @@ fail with a descriptive error.
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{elim-synth}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[130I]\AgdaFunction{Context}\AgdaSpace{}%
+\>[143I]\AgdaFunction{Context}\AgdaSpace{}%
 \AgdaGeneralizable{γ}%
 \>[42]\AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[130I]%
-\>[13]\AgdaDatatype{Rules}%
-\>[42]\AgdaSymbol{→}\<%
+\>[.][@{}l@{}]\<[143I]%
+\>[13]\AgdaDatatype{RuleSet}%
+\>[44]\AgdaSymbol{→}\<%
 \\
 %
 \>[13]\AgdaDatatype{List}\AgdaSpace{}%
@@ -447,9 +493,9 @@ we will involve a more sophisticated notion here.
 \AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
 \AgdaBound{x₃}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[207I]\AgdaKeyword{do}\<%
+\>[220I]\AgdaKeyword{do}\<%
 \\
-\>[207I][@{}l@{\AgdaIndent{0}}]%
+\>[220I][@{}l@{\AgdaIndent{0}}]%
 \>[36]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaBound{x}%
@@ -511,9 +557,9 @@ we will involve a more sophisticated notion here.
 \AgdaBound{e'}\AgdaSpace{}%
 \AgdaBound{s'}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[247I]\AgdaKeyword{do}\<%
+\>[260I]\AgdaKeyword{do}\<%
 \\
-\>[247I][@{}l@{\AgdaIndent{0}}]%
+\>[260I][@{}l@{\AgdaIndent{0}}]%
 \>[40]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaBound{e}\AgdaSpace{}%
@@ -540,9 +586,9 @@ we will involve a more sophisticated notion here.
 \AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
 \AgdaBound{T'}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[265I]\AgdaKeyword{do}\<%
+\>[278I]\AgdaKeyword{do}\<%
 \\
-\>[265I][@{}l@{\AgdaIndent{0}}]%
+\>[278I][@{}l@{\AgdaIndent{0}}]%
 \>[35]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaBound{t}\AgdaSpace{}%
@@ -586,8 +632,8 @@ process is checked to be a type before $infer$ returns it.
 \begin{code}%
 \>[0]\AgdaFunction{check}%
 \>[7]\AgdaSymbol{:}%
-\>[10]\AgdaDatatype{Rules}%
-\>[34]\AgdaSymbol{→}\<%
+\>[10]\AgdaDatatype{RuleSet}%
+\>[36]\AgdaSymbol{→}\<%
 \\
 %
 \>[10]\AgdaFunction{Context}\AgdaSpace{}%
@@ -618,8 +664,8 @@ process is checked to be a type before $infer$ returns it.
 \\
 \>[0]\AgdaFunction{infer}%
 \>[7]\AgdaSymbol{:}%
-\>[10]\AgdaDatatype{Rules}%
-\>[33]\AgdaSymbol{→}\<%
+\>[10]\AgdaDatatype{RuleSet}%
+\>[35]\AgdaSymbol{→}\<%
 \\
 %
 \>[10]\AgdaFunction{Context}\AgdaSpace{}%
@@ -666,13 +712,13 @@ which we are currently operating.
 \begin{code}%
 \>[0]\AgdaFunction{check-premise}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[293I]\AgdaFunction{Context}\AgdaSpace{}%
+\>[306I]\AgdaFunction{Context}\AgdaSpace{}%
 \AgdaGeneralizable{γ}%
 \>[28]\AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[293I]%
-\>[16]\AgdaDatatype{Rules}%
-\>[28]\AgdaSymbol{→}\<%
+\>[.][@{}l@{}]\<[306I]%
+\>[16]\AgdaDatatype{RuleSet}%
+\>[30]\AgdaSymbol{→}\<%
 \\
 %
 \>[16]\AgdaGeneralizable{p}\AgdaSpace{}%
@@ -717,9 +763,9 @@ which we are currently operating.
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaSymbol{=}%
-\>[317I]\AgdaKeyword{do}\<%
+\>[330I]\AgdaKeyword{do}\<%
 \\
-\>[.][@{}l@{}]\<[317I]%
+\>[.][@{}l@{}]\<[330I]%
 \>[4]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{check}\AgdaSpace{}%
@@ -761,7 +807,8 @@ which we are currently operating.
 \AgdaBound{t}\AgdaSpace{}%
 \AgdaBound{u}\AgdaSpace{}%
 \AgdaBound{∋}\AgdaSpace{}%
-\AgdaBound{e}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{e}\AgdaSpace{}%
+\AgdaBound{β}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{penv}\AgdaSpace{}%
 \AgdaBound{qenv}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{type}\AgdaSpace{}%
@@ -770,9 +817,9 @@ which we are currently operating.
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaSymbol{=}%
-\>[355I]\AgdaKeyword{do}\<%
+\>[369I]\AgdaKeyword{do}\<%
 \\
-\>[.][@{}l@{}]\<[355I]%
+\>[.][@{}l@{}]\<[369I]%
 \>[4]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{type-check}%
@@ -809,9 +856,9 @@ which we are currently operating.
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaSymbol{=}%
-\>[380I]\AgdaKeyword{do}\<%
+\>[394I]\AgdaKeyword{do}\<%
 \\
-\>[.][@{}l@{}]\<[380I]%
+\>[.][@{}l@{}]\<[394I]%
 \>[4]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{toTerm}\AgdaSpace{}%
@@ -840,7 +887,8 @@ which we are currently operating.
 \AgdaBound{t}\AgdaSpace{}%
 \AgdaBound{u}\AgdaSpace{}%
 \AgdaBound{∋}\AgdaSpace{}%
-\AgdaBound{e}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{e}\AgdaSpace{}%
+\AgdaBound{β}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{penv}\AgdaSpace{}%
 \AgdaBound{qenv}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{univ}\AgdaSpace{}%
@@ -848,9 +896,9 @@ which we are currently operating.
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaSymbol{=}%
-\>[407I]\AgdaKeyword{do}\<%
+\>[422I]\AgdaKeyword{do}\<%
 \\
-\>[.][@{}l@{}]\<[407I]%
+\>[.][@{}l@{}]\<[422I]%
 \>[4]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{univ-check}\AgdaSpace{}%
@@ -884,9 +932,9 @@ which we are currently operating.
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaSymbol{=}%
-\>[432I]\AgdaKeyword{do}\<%
+\>[447I]\AgdaKeyword{do}\<%
 \\
-\>[.][@{}l@{}]\<[432I]%
+\>[.][@{}l@{}]\<[447I]%
 \>[4]\AgdaSymbol{(}\AgdaBound{p'env}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{q'env}\AgdaSymbol{)}\AgdaSpace{}%
@@ -941,8 +989,8 @@ which we are currently operating.
 \>[45]\AgdaSymbol{→}\<%
 \\
 %
-\>[27]\AgdaDatatype{Rules}%
-\>[45]\AgdaSymbol{→}\<%
+\>[27]\AgdaDatatype{RuleSet}%
+\>[47]\AgdaSymbol{→}\<%
 \\
 %
 \>[27]\AgdaBound{p}\AgdaSpace{}%
@@ -990,9 +1038,9 @@ which we are currently operating.
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[1]\AgdaSymbol{=}%
-\>[485I]\AgdaKeyword{do}\<%
+\>[500I]\AgdaKeyword{do}\<%
 \\
-\>[485I][@{}l@{\AgdaIndent{0}}]%
+\>[500I][@{}l@{\AgdaIndent{0}}]%
 \>[5]\AgdaSymbol{(}\AgdaBound{p'env}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{q₁env}\AgdaSymbol{)}\AgdaSpace{}%
@@ -1053,8 +1101,8 @@ the output of running the elimination rule.
 \>[43]\AgdaSymbol{→}\<%
 \\
 %
-\>[14]\AgdaDatatype{Rules}%
-\>[43]\AgdaSymbol{→}\<%
+\>[14]\AgdaDatatype{RuleSet}%
+\>[45]\AgdaSymbol{→}\<%
 \\
 %
 \>[14]\AgdaSymbol{(}\AgdaBound{rule}\AgdaSpace{}%
@@ -1089,24 +1137,25 @@ the output of running the elimination rule.
 \AgdaBound{t}\AgdaSpace{}%
 \AgdaBound{u}\AgdaSpace{}%
 \AgdaBound{∋}\AgdaSpace{}%
-\AgdaBound{e}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{e}\AgdaSpace{}%
+\AgdaBound{β}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{rule}\AgdaSpace{}%
 \AgdaBound{ienv}\AgdaSpace{}%
 \AgdaBound{senv}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaSymbol{=}%
-\>[527I]\AgdaKeyword{do}\<%
+\>[543I]\AgdaKeyword{do}\<%
 \\
-\>[527I][@{}l@{\AgdaIndent{0}}]%
+\>[543I][@{}l@{\AgdaIndent{0}}]%
 \>[5]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{type-check}%
-\>[530I]\AgdaBound{Γ}\AgdaSpace{}%
+\>[546I]\AgdaBound{Γ}\AgdaSpace{}%
 \AgdaBound{rules}\AgdaSpace{}%
 \AgdaBound{t}\<%
 \\
-\>[.][@{}l@{}]\<[530I]%
+\>[.][@{}l@{}]\<[546I]%
 \>[20]\AgdaSymbol{(}\AgdaFunction{termFrom}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{input}\AgdaSpace{}%
 \AgdaBound{rule}\AgdaSymbol{)}\AgdaSpace{}%
@@ -1115,13 +1164,13 @@ the output of running the elimination rule.
 %
 \>[5]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}%
-\>[537I]\AgdaFunction{check-premise-chain}\AgdaSpace{}%
+\>[553I]\AgdaFunction{check-premise-chain}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaBound{rules}\AgdaSpace{}%
 \AgdaBound{ienv}\AgdaSpace{}%
 \AgdaBound{senv}\<%
 \\
-\>[537I][@{}l@{\AgdaIndent{0}}]%
+\>[553I][@{}l@{\AgdaIndent{0}}]%
 \>[20]\AgdaSymbol{(}\AgdaFunction{⊗premises}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{proj₂}\AgdaSpace{}%
@@ -1136,13 +1185,13 @@ the output of running the elimination rule.
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{run-erule}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[548I]\AgdaFunction{Context}\AgdaSpace{}%
+\>[564I]\AgdaFunction{Context}\AgdaSpace{}%
 \AgdaGeneralizable{γ}%
 \>[44]\AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[548I]%
-\>[12]\AgdaDatatype{Rules}%
-\>[44]\AgdaSymbol{→}\<%
+\>[.][@{}l@{}]\<[564I]%
+\>[12]\AgdaDatatype{RuleSet}%
+\>[46]\AgdaSymbol{→}\<%
 \\
 %
 \>[12]\AgdaSymbol{(}\AgdaBound{rule}\AgdaSpace{}%
@@ -1182,18 +1231,18 @@ the output of running the elimination rule.
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaSymbol{=}%
-\>[570I]\AgdaKeyword{do}\<%
+\>[586I]\AgdaKeyword{do}\<%
 \\
-\>[570I][@{}l@{\AgdaIndent{0}}]%
+\>[586I][@{}l@{\AgdaIndent{0}}]%
 \>[6]\AgdaBound{p'env}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}%
-\>[572I]\AgdaFunction{check-premise-chain}\AgdaSpace{}%
+\>[588I]\AgdaFunction{check-premise-chain}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaBound{rules}\AgdaSpace{}%
 \AgdaBound{T-env}\AgdaSpace{}%
 \AgdaBound{s-env}\<%
 \\
-\>[572I][@{}l@{\AgdaIndent{0}}]%
+\>[588I][@{}l@{\AgdaIndent{0}}]%
 \>[20]\AgdaSymbol{(}\AgdaFunction{⊗premises}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{proj₂}\AgdaSpace{}%
@@ -1223,7 +1272,7 @@ while constructing this system of functions.
 \AgdaFunction{Context}\AgdaSpace{}%
 \AgdaGeneralizable{γ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Rules}\AgdaSpace{}%
+\AgdaDatatype{RuleSet}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{rule}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -1247,15 +1296,16 @@ while constructing this system of functions.
 \AgdaBound{t}\AgdaSpace{}%
 \AgdaBound{u}\AgdaSpace{}%
 \AgdaBound{∋}\AgdaSpace{}%
-\AgdaBound{e}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{e}\AgdaSpace{}%
+\AgdaBound{β}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{rule}\AgdaSpace{}%
 \AgdaBound{env}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaSymbol{=}%
-\>[614I]\AgdaKeyword{do}\<%
+\>[631I]\AgdaKeyword{do}\<%
 \\
-\>[614I][@{}l@{\AgdaIndent{0}}]%
+\>[631I][@{}l@{\AgdaIndent{0}}]%
 \>[5]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{type-check}\AgdaSpace{}%
@@ -1292,7 +1342,7 @@ while constructing this system of functions.
 \AgdaFunction{Context}\AgdaSpace{}%
 \AgdaGeneralizable{γ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Rules}\AgdaSpace{}%
+\AgdaDatatype{RuleSet}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{rule}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -1316,9 +1366,9 @@ while constructing this system of functions.
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaSymbol{=}%
-\>[659I]\AgdaKeyword{do}\<%
+\>[676I]\AgdaKeyword{do}\<%
 \\
-\>[659I][@{}l@{\AgdaIndent{0}}]%
+\>[676I][@{}l@{\AgdaIndent{0}}]%
 \>[6]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{check-premise-chain}\AgdaSpace{}%
@@ -1587,14 +1637,15 @@ while constructing this system of functions.
 \AgdaBound{t}\AgdaSpace{}%
 \AgdaBound{u}\AgdaSpace{}%
 \AgdaBound{∋}\AgdaSpace{}%
-\AgdaBound{ee}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaBound{Γ}%
-\>[842I]\AgdaSymbol{(}\AgdaInductiveConstructor{var}\AgdaSpace{}%
+\AgdaBound{ee}\AgdaSpace{}%
+\AgdaBound{β}\AgdaSymbol{)}%
+\>[859I]\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{var}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSymbol{)}%
-\>[39]\AgdaSymbol{=}\AgdaSpace{}%
+\>[41]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaKeyword{do}\<%
 \\
-\>[.][@{}l@{}]\<[842I]%
+\>[.][@{}l@{}]\<[859I]%
 \>[28]\AgdaComment{-- check postcondition:}\<%
 \\
 \>[28][@{}l@{\AgdaIndent{0}}]%
@@ -1619,15 +1670,16 @@ while constructing this system of functions.
 \AgdaBound{t}\AgdaSpace{}%
 \AgdaBound{u}\AgdaSpace{}%
 \AgdaBound{∋}\AgdaSpace{}%
-\AgdaBound{ee}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaBound{Γ}%
-\>[862I]\AgdaSymbol{(}\AgdaInductiveConstructor{elim}\AgdaSpace{}%
+\AgdaBound{ee}\AgdaSpace{}%
+\AgdaBound{β}\AgdaSymbol{)}%
+\>[880I]\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{elim}\AgdaSpace{}%
 \AgdaBound{e}\AgdaSpace{}%
 \AgdaBound{s}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaKeyword{do}\<%
 \\
-\>[862I][@{}l@{\AgdaIndent{0}}]%
+\>[880I][@{}l@{\AgdaIndent{0}}]%
 \>[29]\AgdaBound{T}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{infer}\AgdaSpace{}%
@@ -1664,17 +1716,18 @@ while constructing this system of functions.
 \>[0]\AgdaFunction{infer}\AgdaSpace{}%
 \AgdaBound{rules}\AgdaSymbol{@(}\AgdaInductiveConstructor{rs}\AgdaSpace{}%
 \AgdaBound{tr}%
-\>[888I]\AgdaBound{u}\AgdaSpace{}%
+\>[907I]\AgdaBound{u}\AgdaSpace{}%
 \AgdaBound{∋}\AgdaSpace{}%
-\AgdaBound{e}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{e}\AgdaSpace{}%
+\AgdaBound{β}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
 \AgdaBound{T}\AgdaSymbol{)}%
-\>[37]\AgdaSymbol{=}\AgdaSpace{}%
+\>[39]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaKeyword{do}\<%
 \\
-\>[.][@{}l@{}]\<[888I]%
+\>[.][@{}l@{}]\<[907I]%
 \>[19]\AgdaComment{-- postcondition checks in ∋-check}\<%
 \\
 %
@@ -1715,7 +1768,8 @@ while constructing this system of functions.
 \AgdaCatchallClause{\AgdaBound{tr}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaBound{u}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaBound{∋}}\AgdaSpace{}%
-\AgdaCatchallClause{\AgdaBound{e}}\AgdaCatchallClause{\AgdaSymbol{)}}\AgdaSpace{}%
+\AgdaCatchallClause{\AgdaBound{e}}\AgdaSpace{}%
+\AgdaCatchallClause{\AgdaBound{β}}\AgdaCatchallClause{\AgdaSymbol{)}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaBound{Γ}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaBound{T}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaBound{t}}\AgdaSpace{}%
@@ -1731,17 +1785,18 @@ while constructing this system of functions.
 \AgdaSymbol{\{\AgdaUnderscore{}\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaBound{rules}\AgdaSymbol{@(}\AgdaInductiveConstructor{rs}%
-\>[936I]\AgdaBound{tr}\AgdaSpace{}%
+\>[957I]\AgdaBound{tr}\AgdaSpace{}%
 \AgdaBound{u}\AgdaSpace{}%
 \AgdaBound{∋}\AgdaSpace{}%
-\AgdaBound{e}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{e}\AgdaSpace{}%
+\AgdaBound{β}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaBound{T}\AgdaSpace{}%
 \AgdaBound{t}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaKeyword{do}\<%
 \\
-\>[.][@{}l@{}]\<[936I]%
+\>[.][@{}l@{}]\<[957I]%
 \>[28]\AgdaBound{S}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{infer}\AgdaSpace{}%
@@ -1755,3 +1810,4 @@ while constructing this system of functions.
 \AgdaBound{T}\<%
 \end{code}
 }
+
