--- a/report/unicode.tex
+++ b/report/unicode.tex
@@ -26,6 +26,7 @@
 \newunicodechar{‼}{\ensuremath{!!}}
 \newunicodechar{⁇}{\ensuremath{??}}
 \newunicodechar{∥}{\ensuremath{\|}}
+\newunicodechar{|}{\ensuremath{\|}}
 \newunicodechar{∶}{\ensuremath{:}}
 
 % indices
