--- a/TypeCheckerGenerator/latex/Expression.tex
+++ b/TypeCheckerGenerator/latex/Expression.tex
@@ -53,9 +53,9 @@
 \\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
-\AgdaModule{Data.Char}\AgdaSpace{}%
+\AgdaModule{Data.String}\AgdaSpace{}%
 \AgdaKeyword{using}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaPostulate{Char}\AgdaSymbol{)}\<%
+\AgdaSymbol{(}\AgdaPostulate{String}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
@@ -176,7 +176,7 @@ necessary information to build a term.
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaInductiveConstructor{`}%
 \>[9]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaPostulate{Char}\AgdaSpace{}%
+\AgdaPostulate{String}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaDatatype{con}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
