--- a/TypeCheckerGenerator/latex/Pattern.tex
+++ b/TypeCheckerGenerator/latex/Pattern.tex
@@ -32,13 +32,10 @@
 \\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
-\AgdaModule{Data.Char}\AgdaSpace{}%
+\AgdaModule{Data.String}\AgdaSpace{}%
 \AgdaKeyword{using}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaPostulate{Char}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaKeyword{renaming}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}≟\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{to}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}is\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
+\AgdaSymbol{(}\AgdaPostulate{String}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}==\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
@@ -155,7 +152,7 @@ associated $p\mbox{-Env}$
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaInductiveConstructor{`}%
 \>[9]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaPostulate{Char}\AgdaSpace{}%
+\AgdaPostulate{String}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaDatatype{Pattern}\AgdaSpace{}%
 \AgdaBound{γ}\<%
@@ -249,12 +246,12 @@ associated $p\mbox{-Env}$
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaInductiveConstructor{`}%
 \>[9]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{c}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{s}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaPostulate{Char}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaPostulate{String}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{`}\AgdaSpace{}%
-\AgdaBound{c}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{-Env}}\<%
 \\
 %
@@ -489,26 +486,21 @@ returns an environment for the \emph{opened} pattern.
 \AgdaBound{c}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaKeyword{with}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{is}}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{==}}\AgdaSpace{}%
 \AgdaBound{c}\<%
 \\
 \>[0]\AgdaSymbol{...}\AgdaSpace{}%
 \AgdaSymbol{|}\AgdaSpace{}%
-\AgdaInductiveConstructor{true}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{because}}\AgdaSpace{}%
-\AgdaInductiveConstructor{ofʸ}\AgdaSpace{}%
-\AgdaInductiveConstructor{refl}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{just}\AgdaSpace{}%
+\AgdaInductiveConstructor{true}%
+\>[13]\AgdaSymbol{=}%
+\>[16]\AgdaInductiveConstructor{just}\AgdaSpace{}%
 \AgdaInductiveConstructor{`}\<%
 \\
 \>[0]\AgdaSymbol{...}\AgdaSpace{}%
 \AgdaSymbol{|}\AgdaSpace{}%
-\AgdaInductiveConstructor{false}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{because}}\AgdaSpace{}%
-\AgdaSymbol{\AgdaUnderscore{}}%
-\>[28]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{nothing}\<%
+\AgdaInductiveConstructor{false}%
+\>[13]\AgdaSymbol{=}%
+\>[16]\AgdaInductiveConstructor{nothing}\<%
 \\
 \>[0]\AgdaFunction{match}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{s}\AgdaSpace{}%
@@ -518,9 +510,9 @@ returns an environment for the \emph{opened} pattern.
 \AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
 \AgdaBound{q}\AgdaSymbol{)}%
 \>[24]\AgdaSymbol{=}%
-\>[309I]\AgdaKeyword{do}\<%
+\>[298I]\AgdaKeyword{do}\<%
 \\
-\>[309I][@{}l@{\AgdaIndent{0}}]%
+\>[298I][@{}l@{\AgdaIndent{0}}]%
 \>[28]\AgdaBound{x}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{match}\AgdaSpace{}%
@@ -546,9 +538,9 @@ returns an environment for the \emph{opened} pattern.
 \AgdaSymbol{(}\AgdaInductiveConstructor{bind}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[326I]\AgdaKeyword{do}\<%
+\>[315I]\AgdaKeyword{do}\<%
 \\
-\>[326I][@{}l@{\AgdaIndent{0}}]%
+\>[315I][@{}l@{\AgdaIndent{0}}]%
 \>[28]\AgdaBound{x}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{match}\AgdaSpace{}%
@@ -563,6 +555,8 @@ returns an environment for the \emph{opened} pattern.
 %
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaComment{-- TO DO, THUNK MATCHING!! evaluate it to head normal form}\<%
+\\
+\>[0]\AgdaComment{-- or do we assume that hnf was attempted already?}\<%
 \\
 \>[0]\AgdaCatchallClause{\AgdaFunction{match}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaSymbol{\AgdaUnderscore{}}}\AgdaSpace{}%
@@ -832,7 +826,7 @@ having a pattern index which also needs to be opened in the return type.
 \AgdaInductiveConstructor{⋆}%
 \>[17]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{`}\AgdaSpace{}%
-\AgdaString{'⊤'}\<%
+\AgdaString{"⊤"}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
