--- a/TypeCheckerGenerator/latex/Rules.tex
+++ b/TypeCheckerGenerator/latex/Rules.tex
@@ -72,7 +72,9 @@
 \\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
-\AgdaModule{Data.Char}\<%
+\AgdaModule{Data.String}\AgdaSpace{}%
+\AgdaKeyword{using}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaPostulate{String}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
@@ -94,10 +96,10 @@
 \AgdaKeyword{import}\AgdaSpace{}%
 \AgdaModule{Relation.Binary.PropositionalEquality}\AgdaSpace{}%
 \AgdaKeyword{using}%
-\>[62I]\AgdaSymbol{(}\AgdaFunction{cong}\AgdaSymbol{;}\AgdaSpace{}%
+\>[64I]\AgdaSymbol{(}\AgdaFunction{cong}\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaFunction{sym}\AgdaSymbol{;}\<%
 \\
-\>[62I][@{}l@{\AgdaIndent{0}}]%
+\>[64I][@{}l@{\AgdaIndent{0}}]%
 \>[57]\AgdaOperator{\AgdaDatatype{\AgdaUnderscore{}≡\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaInductiveConstructor{refl}\AgdaSymbol{)}\<%
 \end{code}
@@ -314,7 +316,7 @@ is also given here.
 \AgdaBound{q}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{`}\AgdaSpace{}%
-\AgdaString{'⊤'}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaString{"⊤"}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{q}\<%
 \\
 %
@@ -330,7 +332,7 @@ is also given here.
 \AgdaBound{q}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{`}\AgdaSpace{}%
-\AgdaString{'⊤'}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaString{"⊤"}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{q}\<%
 \\
 %
@@ -361,12 +363,12 @@ is also given here.
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{⊗premise}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[213I]\AgdaSymbol{(}\AgdaBound{δ}\AgdaSpace{}%
+\>[215I]\AgdaSymbol{(}\AgdaBound{δ}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Scope}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[213I]%
+\>[.][@{}l@{}]\<[215I]%
 \>[11]\AgdaDatatype{Prem}\AgdaSpace{}%
 \AgdaGeneralizable{p}\AgdaSpace{}%
 \AgdaGeneralizable{q}\AgdaSpace{}%
@@ -618,12 +620,12 @@ by $p -places$ and, as with many of our types, define opening on Placeless.
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaInductiveConstructor{`}%
 \>[8]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{c}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{s}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaPostulate{Char}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaPostulate{String}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaInductiveConstructor{`}\AgdaSpace{}%
-\AgdaBound{c}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{Placeless}}\<%
 \\
 %
@@ -679,7 +681,7 @@ by $p -places$ and, as with many of our types, define opening on Placeless.
 \>[9]\AgdaOperator{\AgdaFunction{-places}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{`}\AgdaSpace{}%
-\AgdaString{'⊤'}\<%
+\AgdaString{"⊤"}\<%
 \\
 \>[0]\AgdaComment{--...}\<%
 \end{code}
@@ -776,7 +778,7 @@ by $p -places$ and, as with many of our types, define opening on Placeless.
 \AgdaOperator{\AgdaFunction{placeless}}%
 \>[19]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{`}\AgdaSpace{}%
-\AgdaString{'⊤'}\<%
+\AgdaString{"⊤"}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
@@ -978,7 +980,7 @@ a type rule is just attempting to match the subject pattern.
 \AgdaFunction{]}\AgdaSpace{}%
 \AgdaDatatype{Prems}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{`}\AgdaSpace{}%
-\AgdaString{'⊤'}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaString{"⊤"}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaField{subject}\AgdaSpace{}%
 \AgdaBound{p'}\<%
 \\
@@ -989,12 +991,12 @@ a type rule is just attempting to match the subject pattern.
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{match-typerule}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[635I]\AgdaSymbol{(}\AgdaBound{rule}\AgdaSpace{}%
+\>[637I]\AgdaSymbol{(}\AgdaBound{rule}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaRecord{TypeRule}\AgdaSymbol{)}%
 \>[36]\AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[635I]%
+\>[.][@{}l@{}]\<[637I]%
 \>[17]\AgdaFunction{Term}\AgdaSpace{}%
 \AgdaInductiveConstructor{const}\AgdaSpace{}%
 \AgdaGeneralizable{γ}%
@@ -1053,7 +1055,7 @@ Matching a Universe rule involves matching the input only.
 \AgdaDatatype{Prems}\AgdaSpace{}%
 \AgdaField{input}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{`}\AgdaSpace{}%
-\AgdaString{'⊤'}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaString{"⊤"}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{p'}\<%
 \\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
@@ -1164,12 +1166,12 @@ pair of environments.
 \\
 \>[18][@{}l@{\AgdaIndent{0}}]%
 \>[20]\AgdaSymbol{(((}\AgdaGeneralizable{γ}%
-\>[710I]\AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
+\>[712I]\AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{input}\AgdaSpace{}%
 \AgdaBound{rule}\AgdaSymbol{))}%
 \>[43]\AgdaOperator{\AgdaDatatype{-Env}}\AgdaSymbol{)}\<%
 \\
-\>[.][@{}l@{}]\<[710I]%
+\>[.][@{}l@{}]\<[712I]%
 \>[25]\AgdaOperator{\AgdaFunction{×}}\<%
 \\
 %
@@ -1186,9 +1188,9 @@ pair of environments.
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaSymbol{=}%
-\>[719I]\AgdaKeyword{do}\<%
+\>[721I]\AgdaKeyword{do}\<%
 \\
-\>[719I][@{}l@{\AgdaIndent{0}}]%
+\>[721I][@{}l@{\AgdaIndent{0}}]%
 \>[6]\AgdaBound{inenv}%
 \>[14]\AgdaOperator{\AgdaFunction{←}}%
 \>[17]\AgdaFunction{match}\AgdaSpace{}%
@@ -1284,12 +1286,12 @@ which the premise chain has established trust.
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{match-erule}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[749I]\AgdaSymbol{(}\AgdaBound{rule}\AgdaSpace{}%
+\>[751I]\AgdaSymbol{(}\AgdaBound{rule}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaRecord{ElimRule}\AgdaSymbol{)}%
 \>[34]\AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[749I]%
+\>[.][@{}l@{}]\<[751I]%
 \>[14]\AgdaSymbol{(}\AgdaBound{T}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Term}\AgdaSpace{}%
@@ -1310,12 +1312,12 @@ which the premise chain has established trust.
 \\
 \>[14][@{}l@{\AgdaIndent{0}}]%
 \>[16]\AgdaSymbol{(((}\AgdaGeneralizable{γ}%
-\>[760I]\AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
+\>[762I]\AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{ElimRule.targetPat}\AgdaSpace{}%
 \AgdaBound{rule}\AgdaSymbol{))}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{-Env}}\AgdaSymbol{)}\<%
 \\
-\>[.][@{}l@{}]\<[760I]%
+\>[.][@{}l@{}]\<[762I]%
 \>[21]\AgdaOperator{\AgdaFunction{×}}\<%
 \\
 %
@@ -1330,9 +1332,9 @@ which the premise chain has established trust.
 \AgdaBound{T}\AgdaSpace{}%
 \AgdaBound{s}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[772I]\AgdaKeyword{do}\<%
+\>[774I]\AgdaKeyword{do}\<%
 \\
-\>[772I][@{}l@{\AgdaIndent{0}}]%
+\>[774I][@{}l@{\AgdaIndent{0}}]%
 \>[25]\AgdaBound{T-env}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{match}\AgdaSpace{}%
@@ -1354,7 +1356,7 @@ which the premise chain has established trust.
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{s-env}\AgdaSymbol{)}\<%
 \\
-\>[.][@{}l@{}]\<[772I]%
+\>[.][@{}l@{}]\<[774I]%
 \>[23]\AgdaKeyword{where}\<%
 \\
 \>[23][@{}l@{\AgdaIndent{0}}]%
