--- a/TypeCheckerGenerator/latex/Semantics.tex
+++ b/TypeCheckerGenerator/latex/Semantics.tex
@@ -507,9 +507,6 @@ computation in which they have no right.
 \AgdaGeneralizable{γ}\<%
 \\
 %
-\>[4]\AgdaComment{-- to do: change '⊤' to "unknown" ...}\<%
-\\
-%
 \>[4]\AgdaFunction{norm}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
@@ -523,7 +520,7 @@ computation in which they have no right.
 \AgdaSymbol{(}\AgdaBound{Γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{-,}}\AgdaSpace{}%
 \AgdaInductiveConstructor{`}\AgdaSpace{}%
-\AgdaString{'⊤'}\AgdaSpace{}%
+\AgdaString{"unknown"}\AgdaSpace{}%
 \AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{t}\AgdaSymbol{)}\<%
 \\
