--- a/TypeCheckerGenerator/latex/TypeChecker.tex
+++ b/TypeCheckerGenerator/latex/TypeChecker.tex
@@ -99,7 +99,7 @@
 \\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
-\AgdaModule{Data.Char}\AgdaSpace{}%
+\AgdaModule{Data.String}\AgdaSpace{}%
 \AgdaKeyword{using}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}==\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
 \\
@@ -475,7 +475,14 @@ we will involve a more sophisticated notion here.
 \AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{false}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{eqfail}\<%
+\AgdaInductiveConstructor{fail}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaString{"Equivalence failure: "}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaString{" ≠ "}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaBound{x₁}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaSymbol{...}\AgdaSpace{}%
 \AgdaSymbol{|}\AgdaSpace{}%
@@ -493,9 +500,9 @@ we will involve a more sophisticated notion here.
 \AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
 \AgdaBound{x₃}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[220I]\AgdaKeyword{do}\<%
+\>[227I]\AgdaKeyword{do}\<%
 \\
-\>[220I][@{}l@{\AgdaIndent{0}}]%
+\>[227I][@{}l@{\AgdaIndent{0}}]%
 \>[36]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaBound{x}%
@@ -557,9 +564,9 @@ we will involve a more sophisticated notion here.
 \AgdaBound{e'}\AgdaSpace{}%
 \AgdaBound{s'}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[260I]\AgdaKeyword{do}\<%
+\>[267I]\AgdaKeyword{do}\<%
 \\
-\>[260I][@{}l@{\AgdaIndent{0}}]%
+\>[267I][@{}l@{\AgdaIndent{0}}]%
 \>[40]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaBound{e}\AgdaSpace{}%
@@ -586,9 +593,9 @@ we will involve a more sophisticated notion here.
 \AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
 \AgdaBound{T'}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[278I]\AgdaKeyword{do}\<%
+\>[285I]\AgdaKeyword{do}\<%
 \\
-\>[278I][@{}l@{\AgdaIndent{0}}]%
+\>[285I][@{}l@{\AgdaIndent{0}}]%
 \>[35]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaBound{t}\AgdaSpace{}%
@@ -599,11 +606,20 @@ we will involve a more sophisticated notion here.
 \>[35]\AgdaFunction{return}\AgdaSpace{}%
 \AgdaInductiveConstructor{tt}\<%
 \\
-\>[0]\AgdaCatchallClause{\AgdaSymbol{\AgdaUnderscore{}}}\AgdaSpace{}%
+\>[0]\AgdaCatchallClause{\AgdaBound{τ₁}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaOperator{\AgdaFunction{≡ᵗ}}}\AgdaSpace{}%
-\AgdaCatchallClause{\AgdaSymbol{\AgdaUnderscore{}}}%
-\>[8]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{eqfail}\<%
+\AgdaCatchallClause{\AgdaBound{τ₂}}%
+\>[10]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{fail}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaString{"Equivalence failure: "}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaFunction{print}\AgdaSpace{}%
+\AgdaBound{τ₁}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaString{" ≠ "}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaFunction{print}\AgdaSpace{}%
+\AgdaBound{τ₂}\AgdaSymbol{)}\<%
 \end{code}
 }
 
@@ -712,11 +728,11 @@ which we are currently operating.
 \begin{code}%
 \>[0]\AgdaFunction{check-premise}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[306I]\AgdaFunction{Context}\AgdaSpace{}%
+\>[322I]\AgdaFunction{Context}\AgdaSpace{}%
 \AgdaGeneralizable{γ}%
 \>[28]\AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[306I]%
+\>[.][@{}l@{}]\<[322I]%
 \>[16]\AgdaDatatype{RuleSet}%
 \>[30]\AgdaSymbol{→}\<%
 \\
@@ -763,9 +779,9 @@ which we are currently operating.
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaSymbol{=}%
-\>[330I]\AgdaKeyword{do}\<%
+\>[346I]\AgdaKeyword{do}\<%
 \\
-\>[.][@{}l@{}]\<[330I]%
+\>[.][@{}l@{}]\<[346I]%
 \>[4]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{check}\AgdaSpace{}%
@@ -817,9 +833,9 @@ which we are currently operating.
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaSymbol{=}%
-\>[369I]\AgdaKeyword{do}\<%
+\>[385I]\AgdaKeyword{do}\<%
 \\
-\>[.][@{}l@{}]\<[369I]%
+\>[.][@{}l@{}]\<[385I]%
 \>[4]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{type-check}%
@@ -856,9 +872,9 @@ which we are currently operating.
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaSymbol{=}%
-\>[394I]\AgdaKeyword{do}\<%
+\>[410I]\AgdaKeyword{do}\<%
 \\
-\>[.][@{}l@{}]\<[394I]%
+\>[.][@{}l@{}]\<[410I]%
 \>[4]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{toTerm}\AgdaSpace{}%
@@ -896,9 +912,9 @@ which we are currently operating.
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaSymbol{=}%
-\>[422I]\AgdaKeyword{do}\<%
+\>[438I]\AgdaKeyword{do}\<%
 \\
-\>[.][@{}l@{}]\<[422I]%
+\>[.][@{}l@{}]\<[438I]%
 \>[4]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{univ-check}\AgdaSpace{}%
@@ -932,9 +948,9 @@ which we are currently operating.
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaSymbol{=}%
-\>[447I]\AgdaKeyword{do}\<%
+\>[463I]\AgdaKeyword{do}\<%
 \\
-\>[.][@{}l@{}]\<[447I]%
+\>[.][@{}l@{}]\<[463I]%
 \>[4]\AgdaSymbol{(}\AgdaBound{p'env}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{q'env}\AgdaSymbol{)}\AgdaSpace{}%
@@ -1038,9 +1054,9 @@ which we are currently operating.
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[1]\AgdaSymbol{=}%
-\>[500I]\AgdaKeyword{do}\<%
+\>[516I]\AgdaKeyword{do}\<%
 \\
-\>[500I][@{}l@{\AgdaIndent{0}}]%
+\>[516I][@{}l@{\AgdaIndent{0}}]%
 \>[5]\AgdaSymbol{(}\AgdaBound{p'env}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{q₁env}\AgdaSymbol{)}\AgdaSpace{}%
@@ -1145,17 +1161,17 @@ the output of running the elimination rule.
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaSymbol{=}%
-\>[543I]\AgdaKeyword{do}\<%
+\>[559I]\AgdaKeyword{do}\<%
 \\
-\>[543I][@{}l@{\AgdaIndent{0}}]%
+\>[559I][@{}l@{\AgdaIndent{0}}]%
 \>[5]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{type-check}%
-\>[546I]\AgdaBound{Γ}\AgdaSpace{}%
+\>[562I]\AgdaBound{Γ}\AgdaSpace{}%
 \AgdaBound{rules}\AgdaSpace{}%
 \AgdaBound{t}\<%
 \\
-\>[.][@{}l@{}]\<[546I]%
+\>[.][@{}l@{}]\<[562I]%
 \>[20]\AgdaSymbol{(}\AgdaFunction{termFrom}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{input}\AgdaSpace{}%
 \AgdaBound{rule}\AgdaSymbol{)}\AgdaSpace{}%
@@ -1164,13 +1180,13 @@ the output of running the elimination rule.
 %
 \>[5]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}%
-\>[553I]\AgdaFunction{check-premise-chain}\AgdaSpace{}%
+\>[569I]\AgdaFunction{check-premise-chain}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaBound{rules}\AgdaSpace{}%
 \AgdaBound{ienv}\AgdaSpace{}%
 \AgdaBound{senv}\<%
 \\
-\>[553I][@{}l@{\AgdaIndent{0}}]%
+\>[569I][@{}l@{\AgdaIndent{0}}]%
 \>[20]\AgdaSymbol{(}\AgdaFunction{⊗premises}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{proj₂}\AgdaSpace{}%
@@ -1185,11 +1201,11 @@ the output of running the elimination rule.
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{run-erule}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[564I]\AgdaFunction{Context}\AgdaSpace{}%
+\>[580I]\AgdaFunction{Context}\AgdaSpace{}%
 \AgdaGeneralizable{γ}%
 \>[44]\AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[564I]%
+\>[.][@{}l@{}]\<[580I]%
 \>[12]\AgdaDatatype{RuleSet}%
 \>[46]\AgdaSymbol{→}\<%
 \\
@@ -1231,18 +1247,18 @@ the output of running the elimination rule.
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaSymbol{=}%
-\>[586I]\AgdaKeyword{do}\<%
+\>[602I]\AgdaKeyword{do}\<%
 \\
-\>[586I][@{}l@{\AgdaIndent{0}}]%
+\>[602I][@{}l@{\AgdaIndent{0}}]%
 \>[6]\AgdaBound{p'env}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}%
-\>[588I]\AgdaFunction{check-premise-chain}\AgdaSpace{}%
+\>[604I]\AgdaFunction{check-premise-chain}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaBound{rules}\AgdaSpace{}%
 \AgdaBound{T-env}\AgdaSpace{}%
 \AgdaBound{s-env}\<%
 \\
-\>[588I][@{}l@{\AgdaIndent{0}}]%
+\>[604I][@{}l@{\AgdaIndent{0}}]%
 \>[20]\AgdaSymbol{(}\AgdaFunction{⊗premises}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{proj₂}\AgdaSpace{}%
@@ -1303,9 +1319,9 @@ while constructing this system of functions.
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaSymbol{=}%
-\>[631I]\AgdaKeyword{do}\<%
+\>[647I]\AgdaKeyword{do}\<%
 \\
-\>[631I][@{}l@{\AgdaIndent{0}}]%
+\>[647I][@{}l@{\AgdaIndent{0}}]%
 \>[5]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{type-check}\AgdaSpace{}%
@@ -1366,9 +1382,9 @@ while constructing this system of functions.
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaSymbol{=}%
-\>[676I]\AgdaKeyword{do}\<%
+\>[692I]\AgdaKeyword{do}\<%
 \\
-\>[676I][@{}l@{\AgdaIndent{0}}]%
+\>[692I][@{}l@{\AgdaIndent{0}}]%
 \>[6]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{check-premise-chain}\AgdaSpace{}%
@@ -1639,13 +1655,13 @@ while constructing this system of functions.
 \AgdaBound{∋}\AgdaSpace{}%
 \AgdaBound{ee}\AgdaSpace{}%
 \AgdaBound{β}\AgdaSymbol{)}%
-\>[859I]\AgdaBound{Γ}\AgdaSpace{}%
+\>[875I]\AgdaBound{Γ}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{var}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSymbol{)}%
 \>[41]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaKeyword{do}\<%
 \\
-\>[.][@{}l@{}]\<[859I]%
+\>[.][@{}l@{}]\<[875I]%
 \>[28]\AgdaComment{-- check postcondition:}\<%
 \\
 \>[28][@{}l@{\AgdaIndent{0}}]%
@@ -1672,14 +1688,14 @@ while constructing this system of functions.
 \AgdaBound{∋}\AgdaSpace{}%
 \AgdaBound{ee}\AgdaSpace{}%
 \AgdaBound{β}\AgdaSymbol{)}%
-\>[880I]\AgdaBound{Γ}\AgdaSpace{}%
+\>[896I]\AgdaBound{Γ}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{elim}\AgdaSpace{}%
 \AgdaBound{e}\AgdaSpace{}%
 \AgdaBound{s}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaKeyword{do}\<%
 \\
-\>[880I][@{}l@{\AgdaIndent{0}}]%
+\>[896I][@{}l@{\AgdaIndent{0}}]%
 \>[29]\AgdaBound{T}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{infer}\AgdaSpace{}%
@@ -1716,7 +1732,7 @@ while constructing this system of functions.
 \>[0]\AgdaFunction{infer}\AgdaSpace{}%
 \AgdaBound{rules}\AgdaSymbol{@(}\AgdaInductiveConstructor{rs}\AgdaSpace{}%
 \AgdaBound{tr}%
-\>[907I]\AgdaBound{u}\AgdaSpace{}%
+\>[923I]\AgdaBound{u}\AgdaSpace{}%
 \AgdaBound{∋}\AgdaSpace{}%
 \AgdaBound{e}\AgdaSpace{}%
 \AgdaBound{β}\AgdaSymbol{)}\AgdaSpace{}%
@@ -1727,7 +1743,7 @@ while constructing this system of functions.
 \>[39]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaKeyword{do}\<%
 \\
-\>[.][@{}l@{}]\<[907I]%
+\>[.][@{}l@{}]\<[923I]%
 \>[19]\AgdaComment{-- postcondition checks in ∋-check}\<%
 \\
 %
@@ -1754,7 +1770,7 @@ while constructing this system of functions.
 \AgdaBound{T}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSymbol{)}%
-\>[44]\AgdaSymbol{=}\AgdaSpace{}%
+\>[46]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{check}\AgdaSpace{}%
 \AgdaBound{rules}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
@@ -1785,7 +1801,7 @@ while constructing this system of functions.
 \AgdaSymbol{\{\AgdaUnderscore{}\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaBound{rules}\AgdaSymbol{@(}\AgdaInductiveConstructor{rs}%
-\>[957I]\AgdaBound{tr}\AgdaSpace{}%
+\>[973I]\AgdaBound{tr}\AgdaSpace{}%
 \AgdaBound{u}\AgdaSpace{}%
 \AgdaBound{∋}\AgdaSpace{}%
 \AgdaBound{e}\AgdaSpace{}%
@@ -1796,7 +1812,7 @@ while constructing this system of functions.
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaKeyword{do}\<%
 \\
-\>[.][@{}l@{}]\<[957I]%
+\>[.][@{}l@{}]\<[973I]%
 \>[28]\AgdaBound{S}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{infer}\AgdaSpace{}%
@@ -1810,4 +1826,3 @@ while constructing this system of functions.
 \AgdaBound{T}\<%
 \end{code}
 }
-
